# vereinsappell

./: .firebaserc  .gitignore  AI.md  README.md  aiprompt.txt  aws_backend_terraform.txt  build_schuetzenverein_app.sh  database.rules.json  firebase.json  lambda_create_fine.py  pubspec.yaml  run_on_phone.sh  schuetzen_app.jsx  schuetzenverein_app.txt  strafgelder_screen.txt
.claude/: CLAUDE.md
assets/: events.ics
aws_backend/: api_calendar.tf  api_customers.tf  api_docs.tf  api_feedback.tf  api_fines.tf  api_join.tf  api_legal.tf  api_marschbefehl.tf  api_members.tf  api_monitoring.tf  api_news.tf  api_photos.tf  api_reminders.tf  backup.tf  create_ci_user.sh  customer_config.tf  domain.tf  lambda_authorizer.tf  lambda_backend.tf  lambda_warmup.tf  main.tf  outputs.tf  roles.tf  s3.tf  secretsmanager.tf  update_backend.sh  variables.tf
build-scripts/: build-apk.sh  build-ios.sh  build-web.sh  bump-version.sh  create-verein.sh  release-apk.sh  release-ios.sh  release-web.sh  run-on-phone.sh  run-web.sh
knobeln_backend/: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .terraform-docs.yml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cleanup.sh  deploy.sh  package_lambda.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_development.sh
knobeln_backend/src/: __init__.py  create_game.py  get_game.py  guess_total.py  join_game.py  models.py  pick_sticks.py  pick_timeout.py  start_game.py  utils.py  websocket.py
knobeln_backend/terraform/: backend.tf  eventbridge.tf  http_api.tf  iam.tf  lambda.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  websocket_api.tf
knobeln_backend_chatgpt/: README.md  apis.tf  deploy.sh  dynamodb.tf  iam.tf  lambdas.tf  locals.tf  main.tf  outputs.tf  scheduler.tf  variables.tf
knobeln_backend_claude/: README.md  backend.tf  deploy.sh  main.tf  readme_documentation.md
knobeln_backend_gemini/: deploy.sh  main.tf
lib/: config_loader.dart  file_storage.dart  firebase_options.dart  main.dart  storage.dart  version.dart  web_platform_utils.dart  web_platform_utils_stub.dart  web_platform_utils_web.dart  web_storage.dart
linux/: CMakeLists.txt
local_backend/: .venv  local_backend.sh
scripts/: backup_restore.py  cloudwatch-errors.sh  list_members.sh  live-logs.sh  live-version.sh  run-web.sh  send_test_notification.sh  (+1 more)
(+258 files in other folders)
